// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox render should render correctly - disabled 1`] = `
<Fragment>
  <Select
    aria-describedby=""
    aria-invalid={false}
    aria-label="Select Input"
    aria-labelledby=""
    chipGroupComponent={null}
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    favorites={Array []}
    favoritesLabel="Favorites"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    inputIdPrefix=""
    isCreatable={false}
    isDisabled={true}
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    menuAppendTo="inline"
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    onTypeaheadInputChanged={null}
    ouiaSafe={true}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    validated="default"
    variant="checkbox"
    width=""
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Checkbox render should render correctly 1`] = `
<Fragment>
  <Text
    aria-label="text input"
    isDisabled={false}
    items={Array []}
    onChange={[Function]}
    onSubmit={[Function]}
    value=""
  />
</Fragment>
`;

exports[`Checkbox render should render correctly placeholder 1`] = `
<Fragment>
  <Select
    aria-describedby=""
    aria-invalid={false}
    aria-label="Select Input"
    aria-labelledby=""
    chipGroupComponent={null}
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    favorites={Array []}
    favoritesLabel="Favorites"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    inputIdPrefix=""
    isCreatable={false}
    isDisabled={false}
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    menuAppendTo="inline"
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    onTypeaheadInputChanged={null}
    ouiaSafe={true}
    placeholderText="some placeholder"
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    validated="default"
    variant="checkbox"
    width=""
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={true}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Checkbox render should render correctly with items 1`] = `
<Fragment>
  <Select
    aria-describedby=""
    aria-invalid={false}
    aria-label="Select Input"
    aria-labelledby=""
    chipGroupComponent={null}
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    favorites={Array []}
    favoritesLabel="Favorites"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    inputIdPrefix=""
    isCreatable={false}
    isDisabled={false}
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    menuAppendTo="inline"
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    onTypeaheadInputChanged={null}
    ouiaSafe={true}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    validated="default"
    variant="checkbox"
    width=""
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Checkbox render should render correctly with items and default object value 1`] = `
<Fragment>
  <Select
    aria-describedby=""
    aria-invalid={false}
    aria-label="Select Input"
    aria-labelledby=""
    chipGroupComponent={null}
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    favorites={Array []}
    favoritesLabel="Favorites"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    inputIdPrefix=""
    isCreatable={false}
    isDisabled={false}
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    menuAppendTo="inline"
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    onTypeaheadInputChanged={null}
    ouiaSafe={true}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={
      Array [
        "some-value",
      ]
    }
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    validated="default"
    variant="checkbox"
    width=""
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Checkbox render should render correctly with items and default value 1`] = `
<Fragment>
  <Select
    aria-describedby=""
    aria-invalid={false}
    aria-label="Select Input"
    aria-labelledby=""
    chipGroupComponent={null}
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    favorites={Array []}
    favoritesLabel="Favorites"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    inputIdPrefix=""
    isCreatable={false}
    isDisabled={false}
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    menuAppendTo="inline"
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    onTypeaheadInputChanged={null}
    ouiaSafe={true}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={
      Array [
        "some-value",
      ]
    }
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    validated="default"
    variant="checkbox"
    width=""
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`Checkbox render should render correctly with items and selected value 1`] = `
<Fragment>
  <Select
    aria-describedby=""
    aria-invalid={false}
    aria-label="Select Input"
    aria-labelledby=""
    chipGroupComponent={null}
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    favorites={Array []}
    favoritesLabel="Favorites"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    inputIdPrefix=""
    isCreatable={false}
    isDisabled={false}
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    menuAppendTo="inline"
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    onTypeaheadInputChanged={null}
    ouiaSafe={true}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    validated="default"
    variant="checkbox"
    width=""
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <div>
        Custom value
      </div>
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={true}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      Another
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      inputId=""
      isChecked={false}
      isDisabled={false}
      isFavorite={null}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      No value
    </SelectOption>
  </Select>
</Fragment>
`;
